fix connect border alignment and padding

--- a/css/index.css
+++ b/css/index.css
@@ -207,7 +207,7 @@ a {
     margin: 0 3% 0 0 ;
 }
 .connect-links{
-    padding: 0 3%;
+    padding-right: 0 1%;
     border-right: 2px solid #03688D;
 }
 .connect-links:last-child{
@@ -216,6 +216,7 @@ a {
 .connect-imgs{
     display: block;
     width: 50%;
+    margin: 0 auto;
 }
 
 
